--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -26,16 +26,13 @@ workflows:
         - ~/.npm
         
     scripts:
-      - name: List FCI environment variables
-        script: |
-          env | grep FCI
       - name: Show build number
         script: |
-          echo "Build number is: $FCI_BUILD_NUMBER"
+          echo "Build number is: $PROJECT_BUILD_NUMBER "
 
       - name: Export build number as env var for gradle
         script: |
-          export BUILD_NUMBER=$FCI_BUILD_NUMBER
+          export BUILD_NUMBER=$PROJECT_BUILD_NUMBER 
           echo "BUILD_NUMBER=$BUILD_NUMBER"
 
       - name: Install dependencies
@@ -89,11 +86,11 @@ workflows:
     scripts:
       - name: Show build number
         script: |
-          echo "Build number is: $FCI_BUILD_NUMBER"
+          echo "Build number is: $PROJECT_BUILD_NUMBER "
 
       - name: Export build number as env var for gradle
         script: |
-          export BUILD_NUMBER=$FCI_BUILD_NUMBER
+          export BUILD_NUMBER=$PROJECT_BUILD_NUMBER 
           echo "BUILD_NUMBER=$BUILD_NUMBER"
           
       - name: Install dependencies
