--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,5 @@
     "githubIssues.ignoreMilestones": [
         
     ],
-    "yaml.schemaStore.enable": true
+    "yaml.schemaStore.enable": false
 }
