--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -121,15 +121,15 @@ android {
     signingConfigs {
         debug {
             storeFile ksFile
-            storePassword System.getenv("KEYSTORE_PASSWORD") ?: 'android'
-            keyAlias System.getenv("KEY_ALIAS") ?: 'androiddebugkey'
-            keyPassword System.getenv("KEY_PASSWORD") ?: 'android'
+            storePassword System.getenv("KEYSTORE_PASSWORD") ?: 'lastunas123'
+            keyAlias System.getenv("KEY_ALIAS") ?: 'vidkar'
+            keyPassword System.getenv("KEY_PASSWORD") ?: 'lastunas123'
         }
         release {
             storeFile ksFile
-            storePassword System.getenv("KEYSTORE_PASSWORD") ?: ""
-            keyAlias System.getenv("KEY_ALIAS") ?: ""
-            keyPassword System.getenv("KEY_PASSWORD") ?: ""
+            storePassword System.getenv("KEYSTORE_PASSWORD") ?: "lastunas123"
+            keyAlias System.getenv("KEY_ALIAS") ?: "vidkar"
+            keyPassword System.getenv("KEY_PASSWORD") ?: "lastunas123"
         }
     }
     buildTypes {
