--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -153,65 +153,75 @@ workflows:
     max_build_duration: 120
     instance_type: mac_mini_m2
     integrations:
-      app_store_connect: Codemagic
+      app_store_connect: Codemagic    # nombre de la integración creada en Codemagic UI
     environment:
-      #ios_signing:
-       # distribution_type: app_store
-        #bundle_identifier: com.vidkar
       vars:
-        XCODE_WORKSPACE: "Vidkar.xcworkspace" # <-- Put the name of your Xcode workspace here
-        XCODE_SCHEME: "Vidkar" # <-- Put the name of your Xcode scheme here
-        APP_ID: 6751348594 # <-- Put the app id number here. This is found in App Store Connect > App > General > App Information
-        BUNDLE_ID: "com.vidkar" # <- agregado para los comandos de firma
-      node: v19.7.0
+        XCODE_WORKSPACE: "Vidkar.xcworkspace"     # ajusta si tu workspace tiene otro nombre
+        XCODE_SCHEME: "Vidkar"                    # ajusta si tu scheme tiene otro nombre
+        APP_ID: 6751348594                        # App Store Connect - Apple ID (número)
+        BUNDLE_ID: "com.vidkar"                   # Bundle Identifier exacto
+      node: 18
       xcode: latest
       cocoapods: default
+
     scripts:
-        - name: Install npm dependencies
-          script: |
-            npm install
-        - name: Install CocoaPods dependencies
-          script: |
-            cd ios && pod install
-        - name: Set up code signing settings on Xcode project
-          script: |
-            # Inicializa llavero y obtiene/crea perfiles de distribución App Store para el bundle id
-            keychain initialize
-            app-store-connect fetch-signing-files "$BUNDLE_ID" --type IOS_APP_STORE --create
-            keychain add-certificates
-            # Aplica los perfiles al proyecto
-            xcode-project use-profiles
-        - name: Increment build number
-          script: |
-            cd $CM_BUILD_DIR/ios
-            LATEST_BUILD_NUMBER=$(app-store-connect get-latest-testflight-build-number "$APP_ID")
-            agvtool new-version -all $(($LATEST_BUILD_NUMBER + 1))
-        - name: Build ipa for distribution
-          script: |
-            xcode-project build-ipa \
-              --workspace "$CM_BUILD_DIR/ios/$XCODE_WORKSPACE" \
-              --scheme "$XCODE_SCHEME"
+      - name: Install npm dependencies
+        script: |
+          npm install -f
+
+      - name: Install CocoaPods dependencies
+        script: |
+          cd ios
+          pod install
+          cd ..
+
+      - name: Initialize keychain and fetch signing files
+        script: |
+          # crea/abre un keychain en la VM y descarga/crea certificados y provisioning profiles
+          keychain initialize
+
+          # fetch-signing-files usará la integración App Store Connect configurada
+          app-store-connect fetch-signing-files "$BUNDLE_ID" --type IOS_APP_STORE --create
+
+          # añade los certificados al keychain actual
+          keychain add-certificates
+
+          # aplica los provisioning profiles y settings al proyecto Xcode
+          xcode-project use-profiles
+
+      - name: Increment build number (optional)
+        script: |
+          cd $CM_BUILD_DIR/ios
+          # obtiene el ultimo build number de TestFlight y suma 1
+          LATEST_BUILD_NUMBER=$(app-store-connect get-latest-testflight-build-number "$APP_ID" || echo 0)
+          NEW_BUILD_NUMBER=$((LATEST_BUILD_NUMBER + 1))
+          agvtool new-version -all $NEW_BUILD_NUMBER
+          echo "New build number: $NEW_BUILD_NUMBER"
+          cd $CM_BUILD_DIR
+
+      - name: Build ipa for distribution
+        script: |
+          # build-ipa usa la configuración aplicada por xcode-project use-profiles
+          xcode-project build-ipa \
+            --workspace "$CM_BUILD_DIR/ios/$XCODE_WORKSPACE" \
+            --scheme "$XCODE_SCHEME" \
+            --export-method app-store
+
     artifacts:
-        - build/ios/ipa/*.ipa
-        - /tmp/xcodebuild_logs/*.log
-        - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.app
-        - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.dSYM
+      - build/ios/ipa/*.ipa
+      - /tmp/xcodebuild_logs/*.log
+      - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.dSYM
+
     publishing:
-      email:
-        recipients:
-          - carlosmbinf@example.com
-        notify:
-          success: true
-          failure: false
       app_store_connect:
         auth: integration
-
-        # Configuration related to TestFlight (optional)
-        # Note: This action is performed during post-processing.
         submit_to_testflight: true
-        beta_groups: # Specify the names of beta tester groups that will get access to the build once it has passed beta review.
+        beta_groups:
           - group carlitoPruebas
 
-        # Configuration related to App Store (optional)
-        # Note: This action is performed during post-processing.
-        submit_to_app_store: false
+      email:
+        recipients:
+          - "carlosmbinf@gmail.com"
+        notify:
+          success: true
+          failure: true
